# releaser

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build.yml  releaser.yml
src/: config.rs  context.rs  fs.rs  lib.rs  main.rs  package.rs  pr.rs
tests/: integration_tests.rs
