[package]
name = "releaser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
octocrab = "0.43.0"
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
toml = { version = "0.8.20", default-features = false }
